; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckFloatSamples.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckFloatSamples.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kNumPoints = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"Float Samples\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckFloatSamples to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckFloatSamples() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = load i32, i32* @kNumPoints, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %1, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %2, align 8
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %25, %0
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @kNumPoints, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @kNumPoints, align 4
  %18 = sub nsw i32 %17, 1
  %19 = sdiv i32 %16, %18
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @StraightLine(i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %10, i64 %23
  store i32 %21, i32* %24, align 4
  br label %25

25:                                               ; preds = %15
  %26 = load i32, i32* %3, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %3, align 4
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* @kNumPoints, align 4
  %30 = call i32* @cmsBuildTabulatedToneCurveFloat(i32* null, i32 %29, i32* %10)
  store i32* %30, i32** %4, align 8
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @TestCurve(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32* %31, i32 (i32)* @StraightLine)
  store i32 %32, i32* %5, align 4
  %33 = call i32 (...) @DbgThread()
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @cmsFreeToneCurve(i32 %33, i32* %34)
  %36 = load i32, i32* %5, align 4
  %37 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %37)
  ret i32 %36
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @StraightLine(i32) #2

declare dso_local i32* @cmsBuildTabulatedToneCurveFloat(i32*, i32, i32*) #2

declare dso_local i32 @TestCurve(i8*, i32*, i32 (i32)*) #2

declare dso_local i32 @cmsFreeToneCurve(i32, i32*) #2

declare dso_local i32 @DbgThread(...) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
